Ajout d'un fichier CSS et modification du fichier index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/pokedex.css">
     <meta charset="UTF-8">
     <title>Les 151 premiers pokemons</title>
 </head>
