--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,13 @@
             <h5 class="poke-name"> Dracolosse </h5>
             <h5> Dragon / Vol </h5>
         </div>
+        <div class="pokemon-card psychic">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/150.png" alt="">
+            <div class="circle"></div>
+            <h5 class="poke-id"> #150 </h5>
+            <h5 class="poke-name"> Mewtwo </h5>
+            <h5> Psy </h5>
+        </div>
     </div>
     <script src="js/pokedex.js"></script>
 </body>
