--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Les 151 premiers pokemons</h1>
+    
     <div class="pokemon-container">
         <div class="pokemon-card grass poison">
             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png" alt="">
@@ -16,6 +17,12 @@
             <h5> Plante / Poison </h5>
         </div>
 
+    <div class="pokemon-card grass poison">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt=""> <div class="circle"></div>
+        <h5 class="poke-id"> #1 </h5>
+        <h5 class="poke-name"> Bulbizarre </h5>
+        <h5> Plante / Poison </h5>
+    </div>
         <div class="pokemon-card grass poison">
             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" alt="">
             <div class="circle"></div>
